--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.7.1",
     "firebase": "^7.22.0",
     "polka": "next",
+    "screenfull": "^5.0.2",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
