--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "canvas-sketch-util": "^1.10.0",
     "compression": "^1.7.1",
     "firebase": "^7.22.0",
+    "howler": "^2.2.0",
     "polka": "next",
     "screenfull": "^5.0.2",
     "sirv": "^1.0.0"
