--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@supabase/supabase-js": "^0.36.5",
     "canvas-sketch-util": "^1.10.0",
     "compression": "^1.7.1",
-    "firebase": "^7.22.0",
     "howler": "^2.2.0",
     "polka": "next",
     "screenfull": "^5.0.2",
