--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "tailwindcss": "^1.9.5"
   },
   "devDependencies": {
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -44,6 +42,8 @@
     "@rollup/plugin-replace": "^2.2.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0.0",
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3"
   }
 }
