--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@rollup/plugin-json": "^4.1.0",
-    "@supabase/supabase-js": "^0.36.5",
+    "@supabase/supabase-js": "^1.3.2",
     "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.6.2",
     "body-parser": "^1.19.0",
@@ -26,6 +26,8 @@
     "local-ip": "^2.0.0",
     "nanoid": "^3.1.12",
     "pg": "^8.4.1",
+    "rollup-plugin-async": "^1.2.0",
+    "rollup-plugin-node-globals": "^1.4.0",
     "screenfull": "^5.0.2",
     "sirv": "^1.0.0",
     "tailwindcss": "^1.9.5"
@@ -41,9 +43,9 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "rollup": "^2.3.4",
-    "rollup-plugin-svelte": "^6.0.0",
+    "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.0",
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3"
+    "sapper": "^0.28.10",
+    "svelte": "^3.32.0"
   }
 }
