--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ SUPABASE_URL=
 SUPABASE_PRIVATE_KEY=
 SUPABASE_PUBLIC_KEY=
 JWT_SECRET=
+PUSHER_APP_ID=
+PUSHER_KEY=
+PUSHER_SECRET=
+PUSHER_CLUSTER=
