--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvas-sketch-util": "^1.10.0",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "howler": "^2.2.0",
@@ -26,6 +27,8 @@
     "local-ip": "^2.0.0",
     "nanoid": "^3.1.12",
     "pg": "^8.4.1",
+    "pusher": "^4.0.2",
+    "pusher-js": "^7.0.3",
     "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-node-globals": "^1.4.0",
     "screenfull": "^5.0.2",
