--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@supabase/supabase-js": "^1.3.4",
-    "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.6.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "@tailwindcss/ui": "^0.7.2",
+    "autoprefixer": "^10.2.4",
     "body-parser": "^1.19.0",
     "canvas-sketch-util": "^1.10.0",
     "compression": "^1.7.1",
@@ -27,13 +28,14 @@
     "local-ip": "^2.0.0",
     "nanoid": "^3.1.12",
     "pg": "^8.4.1",
+    "postcss": "^8.2.6",
     "pusher": "^4.0.2",
     "pusher-js": "^7.0.3",
     "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-node-globals": "^1.4.0",
     "screenfull": "^5.0.2",
     "sirv": "^1.0.0",
-    "tailwindcss": "^1.9.5"
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -41,7 +43,8 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-babel": "^5.0.0",
+    "@jacksonfrankland/game-kit": "^1.0.1",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
