--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "howler": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.6",
     "local-ip": "^2.0.0",
@@ -30,10 +29,8 @@
     "pg": "^8.4.1",
     "postcss": "^8.2.6",
     "pusher": "^4.0.2",
-    "pusher-js": "^7.0.3",
     "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-node-globals": "^1.4.0",
-    "screenfull": "^5.0.2",
     "sirv": "^1.0.0",
     "tailwindcss": "^2.0.3"
   },
@@ -46,12 +43,16 @@
     "@jacksonfrankland/game-kit": "^1.0.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "howler": "^2.2.1",
+    "import": "^0.0.6",
+    "pusher-js": "^7.0.3",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.10",
+    "screenfull": "^5.1.0",
     "svelte": "^3.32.0"
   }
 }
